objects/Brand__c.object
<CustomObject>
    <description>Brand property rolls into</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates is Brand is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chain__c</fullName>
        <description>Chain the brand rolls into</description>
        <label>Chain</label>
        <referenceTo>Chain__c</referenceTo>
        <relationshipLabel>Brands</relationshipLabel>
        <relationshipName>Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expedia_Brand_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Id from the Lodging Catalog Master Database</description>
        <label>Expedia Brand Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Brand_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Salesforce Id for PSG Brand</description>
        <externalId>true</externalId>
        <label>External Brand Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Brand</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Chain__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>